--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,12 @@ project(GaussianBlurProject)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# 1. Подключаем STB
+# ==========================================
+# 1. Подключаем зависимости (STB + Benchmark)
+# ==========================================
 include(FetchContent)
+
+# STB
 FetchContent_Declare(
     stb
     GIT_REPOSITORY https://github.com/nothings/stb.git
@@ -12,7 +16,7 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(stb)
 
-# 2. Подключаем Google Benchmark
+# Google Benchmark
 FetchContent_Declare(
   googlebenchmark
   GIT_REPOSITORY https://github.com/google/benchmark.git
@@ -21,25 +25,49 @@ FetchContent_Declare(
 set(BENCHMARK_ENABLE_TESTING OFF)
 FetchContent_MakeAvailable(googlebenchmark)
 
-# Находим исходники библиотеки (в папке src)
+# ==========================================
+# 2. Собираем исходники библиотек
+# ==========================================
+# Находим все .cpp в папке src (ImageConvolver.cpp, KnnSearcher.cpp и т.д.)
 file(GLOB SOURCES "src/*.cpp")
 
-# 3. Создаем ЕДИНСТВЕННЫЙ исполняемый файл для тестов
-# Я использую main.cpp, так как именно там у тебя лежит код тестов (судя по ошибке)
-add_executable(run_benchmarks main.cpp ${SOURCES})
-
-# 4. Флаги оптимизации (AVX-512 + O3)
+# ==========================================
+# 3. Настройка компиляции (Флаги)
+# ==========================================
+# Выносим флаги в переменную, чтобы применить к обоим таргетам
 if(MSVC)
-    target_compile_options(run_benchmarks PRIVATE /O2 /arch:AVX512)
+    set(MY_COMPILE_FLAGS /O2 /arch:AVX512)
 else()
-    target_compile_options(run_benchmarks PRIVATE -O3 -march=native)
+    # -march=native автоматически включит avx512f, avx512dq и т.д., если процессор их поддерживает
+    set(MY_COMPILE_FLAGS -O3 -march=native)
 endif()
 
-# 5. Пути к заголовкам
-target_include_directories(run_benchmarks PRIVATE 
+# ==========================================
+# 4. Таргет 1: Бенчмарк Свертки (Image)
+# ==========================================
+add_executable(run_image_benchmark image_main.cpp ${SOURCES})
+
+target_compile_options(run_image_benchmark PRIVATE ${MY_COMPILE_FLAGS})
+
+target_include_directories(run_image_benchmark PRIVATE 
     inc
     ${stb_SOURCE_DIR}
 )
 
-# 6. Линкуем библиотеку бенчмарка
-target_link_libraries(run_benchmarks PRIVATE benchmark::benchmark)
+target_link_libraries(run_image_benchmark PRIVATE benchmark::benchmark)
+
+# ==========================================
+# 5. Таргет 2: Бенчмарк KNN
+# ==========================================
+# Важно: убедись, что файл с тестом KNN называется knn_main.cpp
+add_executable(run_knn_benchmark knn_main.cpp ${SOURCES})
+
+target_compile_options(run_knn_benchmark PRIVATE ${MY_COMPILE_FLAGS})
+
+target_include_directories(run_knn_benchmark PRIVATE 
+    inc
+    # STB тут может быть не нужен, но оставим для единообразия путей
+    ${stb_SOURCE_DIR} 
+)
+
+target_link_libraries(run_knn_benchmark PRIVATE benchmark::benchmark)
